<resources>
    <string name="app_name">ProjectX</string>
    <string name="error_occured">Произошла ошибка!</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="registration_text">Регистрация</string>
    <string name="success_login">Успешный вход!</string>
    <string name="invalid_login">Неверный логин или пароль</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="network_error">Сетевая ошибка</string>
    <string name="success_signup">Успешная регистрация</string>
    <string name="bad_parameters">Неверные параметры</string>
    <string name="email_taken">Email уже занят</string>
    <string name="signup_text">Регистрация</string>
    <string name="phone_text">Телефон</string>
    <string name="email_text">Email</string>
    <string name="name_text">Имя</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="price_in_rub">Цена (руб)</string>
    <string name="rating">Рейтинг</string>
    <string name="save">Сохранить</string>
    <string name="fill_all_fields">Заполните все поля!</string>
    <string name="add_service">Добавить услугу</string>
    <string name="authorization">Авторизация</string>
    <string name="new_service">Новая услуга</string>
    <string name="registration">Регистрация</string>
    <string name="choose_photo">Выберите фото</string>
    <string name="rub_per_service">\u20BD</string>
    <string name="need_permission">Необходимо разрешение на доступ к хранилищу</string>
    <string name="connect_with_author">Связаться</string>
    <string name="all_services">Все артисты</string>
    <string name="my_services">Мои услуги</string>
    <string name="missing_services">Услуг нет</string>
</resources>
