<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <EditText
        android:id="@+id/service_name_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="100"
        android:hint="@string/title"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/service_description_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/service_price_ET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="7"
        android:hint="@string/price_in_rub"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="end"/>

</LinearLayout>